lr/src/snapshots/lr__lalr__tests__epsilon_action_goto.snap
---
source: lr/src/lalr.rs
expression: tables
---
[
    [
        0,
        0,
        5,
        6,
        0,
        0,
        2,
        0,
        3,
        0,
        4,
        0,
    ],
    [
        0,
        0,
        0,
        0,
        0,
        -9,
        0,
        0,
        0,
        0,
        0,
        0,
    ],
    [
        8,
        0,
        0,
        0,
        -3,
        -3,
        0,
        7,
        0,
        0,
        0,
        0,
    ],
    [
        -6,
        10,
        0,
        0,
        -6,
        -6,
        0,
        0,
        0,
        9,
        0,
        0,
    ],
    [
        -7,
        -7,
        0,
        0,
        -7,
        -7,
        0,
        0,
        0,
        0,
        0,
        0,
    ],
    [
        0,
        0,
        5,
        6,
        0,
        0,
        11,
        0,
        3,
        0,
        4,
        0,
    ],
    [
        0,
        0,
        0,
        0,
        -1,
        -1,
        0,
        0,
        0,
        0,
        0,
        0,
    ],
    [
        0,
        0,
        5,
        6,
        0,
        0,
        0,
        0,
        12,
        0,
        4,
        0,
    ],
    [
        -4,
        0,
        0,
        0,
        -4,
        -4,
        0,
        0,
        0,
        0,
        0,
        0,
    ],
    [
        0,
        0,
        5,
        6,
        0,
        0,
        0,
        0,
        0,
        0,
        13,
        0,
    ],
    [
        0,
        0,
        0,
        0,
        14,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
    ],
    [
        8,
        0,
        0,
        0,
        -3,
        -3,
        0,
        15,
        0,
        0,
        0,
        0,
    ],
    [
        -6,
        10,
        0,
        0,
        -6,
        -6,
        0,
        0,
        0,
        16,
        0,
        0,
    ],
    [
        -8,
        -8,
        0,
        0,
        -8,
        -8,
        0,
        0,
        0,
        0,
        0,
        0,
    ],
    [
        0,
        0,
        0,
        0,
        -2,
        -2,
        0,
        0,
        0,
        0,
        0,
        0,
    ],
    [
        -5,
        0,
        0,
        0,
        -5,
        -5,
        0,
        0,
        0,
        0,
        0,
        0,
    ],
]
