lr/src/snapshots/lr__lalr__tests__precedence_action_goto.snap
---
source: lr/src/lalr.rs
expression: tables
---
[
    [
        2,
        0,
        0,
        0,
        3,
        0,
        4,
        0,
        1,
        0,
    ],
    [
        5,
        6,
        7,
        8,
        0,
        0,
        0,
        -8,
        0,
        0,
    ],
    [
        2,
        0,
        0,
        0,
        3,
        0,
        4,
        0,
        9,
        0,
    ],
    [
        2,
        0,
        0,
        0,
        3,
        0,
        4,
        0,
        10,
        0,
    ],
    [
        -7,
        -7,
        -7,
        -7,
        0,
        -7,
        0,
        -7,
        0,
        0,
    ],
    [
        2,
        0,
        0,
        0,
        3,
        0,
        4,
        0,
        11,
        0,
    ],
    [
        2,
        0,
        0,
        0,
        3,
        0,
        4,
        0,
        12,
        0,
    ],
    [
        2,
        0,
        0,
        0,
        3,
        0,
        4,
        0,
        13,
        0,
    ],
    [
        2,
        0,
        0,
        0,
        3,
        0,
        4,
        0,
        14,
        0,
    ],
    [
        -5,
        -5,
        -5,
        -5,
        0,
        -5,
        0,
        -5,
        0,
        0,
    ],
    [
        5,
        6,
        7,
        8,
        0,
        15,
        0,
        0,
        0,
        0,
    ],
    [
        -1,
        6,
        7,
        -1,
        0,
        -1,
        0,
        -1,
        0,
        0,
    ],
    [
        -2,
        -2,
        7,
        -2,
        0,
        -2,
        0,
        -2,
        0,
        0,
    ],
    [
        -3,
        -3,
        7,
        -3,
        0,
        -3,
        0,
        -3,
        0,
        0,
    ],
    [
        5,
        6,
        7,
        0,
        0,
        -4,
        0,
        -4,
        0,
        0,
    ],
    [
        -6,
        -6,
        -6,
        -6,
        0,
        -6,
        0,
        -6,
        0,
        0,
    ],
]
