lr/src/snapshots/lr__lalr__tests__precedence_tables.snap
---
source: lr/src/lalr.rs
expression: tables
---
CompressedTables {
    parse_table: [
        5,
        6,
        7,
        8,
        7,
        15,
        5,
        6,
        7,
        8,
        2,
        5,
        6,
        7,
        3,
        0,
        4,
        6,
        7,
        1,
        0,
        9,
        0,
        0,
        11,
        12,
        13,
        14,
    ],
    action_disp: [
        10,
        6,
        10,
        10,
        -8,
        10,
        10,
        10,
        10,
        -8,
        0,
        16,
        2,
        2,
        11,
        -8,
    ],
    goto_disp: [
        19,
        -16,
    ],
    action_default: [
        0,
        -8,
        0,
        0,
        -7,
        0,
        0,
        0,
        0,
        -5,
        0,
        -1,
        -2,
        -3,
        -4,
        -6,
    ],
    goto_default: [
        10,
        0,
    ],
    check_table: [
        0,
        1,
        2,
        3,
        2,
        5,
        0,
        1,
        2,
        3,
        0,
        0,
        1,
        2,
        4,
        -1,
        6,
        1,
        2,
        8,
        -1,
        8,
        -1,
        -1,
        8,
        8,
        8,
        8,
    ],
}
