lr/src/snapshots/lr__lalr__tests__simple_action_goto.snap
---
source: lr/src/lalr.rs
expression: tables
---
[
    [
        3,
        4,
        0,
        1,
        2,
        0,
    ],
    [
        0,
        0,
        -4,
        0,
        0,
        0,
    ],
    [
        3,
        4,
        0,
        0,
        5,
        0,
    ],
    [
        3,
        4,
        0,
        0,
        6,
        0,
    ],
    [
        -3,
        -3,
        -3,
        0,
        0,
        0,
    ],
    [
        0,
        0,
        -1,
        0,
        0,
        0,
    ],
    [
        -2,
        -2,
        -2,
        0,
        0,
        0,
    ],
]
