lr/src/snapshots/lr__lalr__tests__simple_states.snap
---
source: lr/src/lalr.rs
expression: builder.states(&start_nts)
---
State 0 (start)
_S -> . S      $
S -> . C C      $
C -> . c C      c / d
C -> . d      c / d

State 1
_S -> S .      $

State 2
S -> C . C      $
C -> . c C      $
C -> . d      $

State 3
C -> c . C      c / d / $
C -> . c C      c / d / $
C -> . d      c / d / $

State 4
C -> d .      c / d / $

State 5
S -> C C .      $

State 6
C -> c C .      c / d / $


