lr/src/snapshots/lr__lalr__tests__start_repetition_action_goto.snap
---
source: lr/src/lalr.rs
expression: tables
---
[
    [
        -2,
        -2,
        2,
        0,
    ],
    [
        3,
        -3,
        0,
        0,
    ],
    [
        -1,
        -1,
        0,
        0,
    ],
]
