lr/src/snapshots/lr__lalr__tests__tiger_tables.snap
---
source: lr/src/lalr.rs
expression: tables
---
CompressedTables {
    parse_table: [
        28,
        29,
        25,
        24,
        27,
        26,
        22,
        23,
        21,
        20,
        19,
        22,
        23,
        21,
        20,
        19,
        30,
        31,
        21,
        20,
        19,
        32,
        44,
        28,
        29,
        25,
        24,
        27,
        26,
        18,
        17,
        40,
        41,
        70,
        22,
        23,
        21,
        20,
        19,
        30,
        31,
        28,
        29,
        25,
        24,
        27,
        26,
        96,
        39,
        122,
        61,
        66,
        22,
        23,
        21,
        20,
        19,
        30,
        31,
        68,
        71,
        86,
        39,
        72,
        84,
        28,
        29,
        25,
        24,
        27,
        26,
        -16,
        81,
        37,
        121,
        38,
        22,
        23,
        21,
        20,
        19,
        30,
        31,
        73,
        82,
        87,
        88,
        97,
        89,
        28,
        29,
        25,
        24,
        27,
        26,
        98,
        100,
        105,
        108,
        109,
        22,
        23,
        21,
        20,
        19,
        30,
        31,
        111,
        123,
        127,
        112,
        126,
        131,
        28,
        29,
        25,
        24,
        27,
        26,
        132,
        133,
        137,
        135,
        106,
        22,
        23,
        21,
        20,
        19,
        30,
        31,
        28,
        29,
        25,
        24,
        27,
        26,
        139,
        140,
        146,
        145,
        147,
        22,
        23,
        21,
        20,
        19,
        30,
        31,
        107,
        125,
        33,
        0,
        0,
        115,
        28,
        29,
        25,
        24,
        27,
        26,
        0,
        0,
        0,
        0,
        39,
        22,
        23,
        21,
        20,
        19,
        30,
        31,
        8,
        36,
        78,
        0,
        0,
        86,
        0,
        79,
        5,
        80,
        0,
        102,
        0,
        18,
        17,
        0,
        0,
        0,
        4,
        128,
        12,
        0,
        0,
        14,
        0,
        0,
        13,
        15,
        16,
        0,
        0,
        9,
        6,
        7,
        28,
        29,
        25,
        24,
        27,
        26,
        0,
        0,
        0,
        0,
        0,
        22,
        23,
        21,
        20,
        19,
        30,
        31,
        28,
        29,
        25,
        24,
        27,
        26,
        85,
        0,
        94,
        0,
        0,
        22,
        23,
        21,
        20,
        19,
        30,
        25,
        24,
        27,
        26,
        0,
        0,
        2,
        0,
        0,
        22,
        23,
        21,
        20,
        19,
        35,
        95,
        0,
        0,
        42,
        43,
        0,
        0,
        0,
        0,
        124,
        47,
        48,
        49,
        50,
        51,
        52,
        53,
        54,
        55,
        56,
        57,
        58,
        59,
        60,
        0,
        0,
        0,
        0,
        64,
        65,
        138,
        0,
        69,
        95,
        0,
        141,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        148,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        95,
        0,
        0,
        0,
        0,
        95,
        0,
        90,
        91,
        92,
        0,
        0,
        0,
        0,
        0,
        95,
        0,
        0,
        99,
        0,
        0,
        0,
        0,
        103,
        0,
        104,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        113,
        0,
        114,
        0,
        0,
        117,
        118,
        119,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        130,
        0,
        0,
        0,
        0,
        134,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        143,
        144,
    ],
    action_disp: [
        161,
        -47,
        207,
        15,
        -47,
        161,
        -47,
        -47,
        161,
        53,
        13,
        10,
        161,
        161,
        -21,
        -47,
        -47,
        -47,
        -47,
        161,
        161,
        161,
        161,
        161,
        161,
        161,
        161,
        161,
        161,
        161,
        161,
        161,
        161,
        29,
        207,
        -47,
        -47,
        161,
        161,
        8,
        16,
        161,
        0,
        23,
        57,
        42,
        151,
        -47,
        -47,
        -47,
        5,
        5,
        -5,
        -5,
        -5,
        -5,
        240,
        240,
        225,
        207,
        207,
        -47,
        62,
        63,
        207,
        41,
        39,
        66,
        86,
        65,
        161,
        161,
        161,
        161,
        -47,
        -47,
        -47,
        -47,
        4,
        44,
        52,
        161,
        -47,
        88,
        156,
        -47,
        161,
        -47,
        161,
        69,
        89,
        207,
        113,
        56,
        99,
        -47,
        -47,
        100,
        90,
        207,
        161,
        -47,
        161,
        131,
        207,
        161,
        161,
        161,
        -47,
        31,
        102,
        4,
        68,
        207,
        207,
        39,
        101,
        207,
        -47,
        155,
        -47,
        -47,
        68,
        161,
        -47,
        91,
        112,
        77,
        161,
        103,
        207,
        114,
        4,
        137,
        207,
        -47,
        138,
        4,
        -47,
        161,
        161,
        -47,
        132,
        207,
        207,
        96,
        134,
        4,
        -47,
    ],
    goto_disp: [
        -149,
        -149,
        -149,
        -149,
        -149,
        38,
        155,
        179,
        -149,
        -149,
        -149,
        165,
        248,
        146,
        -149,
        -149,
        -149,
        -149,
        -149,
        -149,
        -149,
        -149,
        -149,
        -149,
    ],
    action_default: [
        0,
        -71,
        -1,
        -29,
        -31,
        -61,
        -33,
        -34,
        0,
        -26,
        0,
        -15,
        0,
        0,
        0,
        -57,
        -2,
        -17,
        -18,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        -59,
        -35,
        -25,
        -65,
        0,
        0,
        -69,
        0,
        0,
        0,
        0,
        0,
        -4,
        -37,
        -38,
        -39,
        -40,
        -41,
        -42,
        -43,
        -44,
        -45,
        -46,
        -47,
        -48,
        -49,
        -30,
        -32,
        -62,
        0,
        -63,
        0,
        -26,
        0,
        0,
        0,
        0,
        0,
        0,
        -61,
        -3,
        -5,
        -6,
        -7,
        0,
        0,
        0,
        0,
        -36,
        -66,
        -26,
        -27,
        0,
        -50,
        0,
        0,
        -54,
        -55,
        0,
        0,
        0,
        -15,
        -16,
        -19,
        0,
        -60,
        0,
        -28,
        0,
        0,
        -67,
        0,
        0,
        0,
        -58,
        0,
        0,
        0,
        -13,
        -64,
        -51,
        -26,
        -70,
        -52,
        -53,
        0,
        -8,
        -9,
        -13,
        0,
        -20,
        0,
        0,
        0,
        0,
        0,
        -21,
        -22,
        0,
        0,
        -56,
        -10,
        0,
        0,
        -11,
        0,
        0,
        -23,
        -14,
        -68,
        -24,
        0,
        0,
        0,
        -12,
    ],
    goto_default: [
        1,
        45,
        74,
        75,
        120,
        129,
        10,
        11,
        76,
        77,
        3,
        101,
        34,
        93,
        63,
        67,
        46,
        142,
        110,
        136,
        62,
        83,
        116,
        0,
    ],
    check_table: [
        0,
        1,
        2,
        3,
        4,
        5,
        11,
        12,
        13,
        14,
        15,
        11,
        12,
        13,
        14,
        15,
        16,
        17,
        13,
        14,
        15,
        6,
        43,
        0,
        1,
        2,
        3,
        4,
        5,
        25,
        26,
        18,
        22,
        33,
        11,
        12,
        13,
        14,
        15,
        16,
        17,
        0,
        1,
        2,
        3,
        4,
        5,
        43,
        9,
        18,
        21,
        43,
        11,
        12,
        13,
        14,
        15,
        16,
        17,
        43,
        37,
        22,
        9,
        6,
        23,
        0,
        1,
        2,
        3,
        4,
        5,
        18,
        10,
        20,
        43,
        22,
        11,
        12,
        13,
        14,
        15,
        16,
        17,
        41,
        21,
        19,
        0,
        43,
        23,
        0,
        1,
        2,
        3,
        4,
        5,
        43,
        8,
        28,
        42,
        0,
        11,
        12,
        13,
        14,
        15,
        16,
        17,
        7,
        6,
        8,
        20,
        43,
        21,
        0,
        1,
        2,
        3,
        4,
        5,
        7,
        43,
        7,
        19,
        34,
        11,
        12,
        13,
        14,
        15,
        16,
        17,
        0,
        1,
        2,
        3,
        4,
        5,
        0,
        0,
        43,
        8,
        7,
        11,
        12,
        13,
        14,
        15,
        16,
        17,
        36,
        52,
        60,
        -1,
        -1,
        23,
        0,
        1,
        2,
        3,
        4,
        5,
        -1,
        -1,
        -1,
        -1,
        9,
        11,
        12,
        13,
        14,
        15,
        16,
        17,
        12,
        58,
        24,
        -1,
        -1,
        22,
        -1,
        29,
        20,
        31,
        -1,
        28,
        -1,
        25,
        26,
        -1,
        -1,
        -1,
        30,
        37,
        32,
        -1,
        -1,
        35,
        -1,
        -1,
        38,
        39,
        40,
        -1,
        -1,
        43,
        44,
        45,
        0,
        1,
        2,
        3,
        4,
        5,
        -1,
        -1,
        -1,
        -1,
        -1,
        11,
        12,
        13,
        14,
        15,
        16,
        17,
        0,
        1,
        2,
        3,
        4,
        5,
        58,
        -1,
        53,
        -1,
        -1,
        11,
        12,
        13,
        14,
        15,
        16,
        2,
        3,
        4,
        5,
        -1,
        -1,
        59,
        -1,
        -1,
        11,
        12,
        13,
        14,
        15,
        59,
        54,
        -1,
        -1,
        59,
        59,
        -1,
        -1,
        -1,
        -1,
        53,
        59,
        59,
        59,
        59,
        59,
        59,
        59,
        59,
        59,
        59,
        59,
        59,
        59,
        59,
        -1,
        -1,
        -1,
        -1,
        59,
        59,
        53,
        -1,
        59,
        54,
        -1,
        53,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        53,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        54,
        -1,
        -1,
        -1,
        -1,
        54,
        -1,
        59,
        59,
        59,
        -1,
        -1,
        -1,
        -1,
        -1,
        54,
        -1,
        -1,
        59,
        -1,
        -1,
        -1,
        -1,
        59,
        -1,
        59,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        59,
        -1,
        59,
        -1,
        -1,
        59,
        59,
        59,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        59,
        -1,
        -1,
        -1,
        -1,
        59,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        59,
        59,
    ],
}
